--- a/.gitignore
+++ b/.gitignore
@@ -6,13 +6,26 @@ bin-release/
 
 # Other files and folders
 .settings/
+node_modules/
+package-lock.json
+yarn.lock
 
 # Executables
 *.swf
 *.air
 *.ipa
 *.apk
+*.env
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+.DS_Store
+
+#Hardhat files
+cache
+artifacts/
+coverage/
+coverage.json
+typechain/
+typechain-types/
